<resources>
    <string name="app_name">2 Days 1 Night Season 4</string>
    <string name="ilbakil">1박2일 시즌4</string>
    <string name="profile">Profile</string>
    <string name="fakhiradevina">Fakhira Devina</string>
    <string name="email">fakhiradevina@gmail.com / A0101023@bangkit.academy</string>
    <string name="ilbak_desc">Two-day road trip to the beautiful spots in all the corners of Korea! Instead of fancy studio, this on-the-road reality show takes place in the rural sides. While over 10 million Koreans travel abroad each year, the \"2 Days and 1 Night\" casts travel around Korea - to the mountains, farms, fishing villages, islands - where you can meet the welcoming smiles of our neighbors and the beautiful nature that cleanse our eyes.</string>
    <string name="about">About</string>
</resources>